# System

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  README_en.md  format.sh  testa1.sh
00_basic/: calloc  calloc.c  check_endian.c  little_endian.c  union_usage.c
01-Linux-command/: README.md
01-Linux-env/: README.md  byteorder.c
01_linux/: bubble_sort.c  byteorder.c  pointer_func.c  pointer_func_2.c  pointer_func_3.c
02-file-IO/: README.md
02_file_io/: README.md  direct_io.c  open.c
03_multi_process/: README.md
03_process/: 01_fork.c  05_sigpipe_a.c  06_sigpipe_b.c  README.md  multi-process.cpp  two_fork_in_if.c
04_thread/: pthread.cpp
05-IPC/: README.md
05-IPC/local_socket/: udp_client.cpp
05-IPC/message_queue/: README.md
05_ipc/: README.md
06-mutex/: Makefile
06_mutex/: README.md  pthread_mutex.c  semaphone.c
07-signal/: README.md  fork_sigprocmask.c  setitimer_test.cpp  sigaction.c
07_signal/: a.out  alarm_test.c  alarm_test.cpp  five_children.c  fork_sigprocmask.c  setitimer_test.c  setitimer_test2.c  sigaction.c  signal_handler.c
08-socket/: 01_socket_bind_ip.c  02_ephemeral_port.c  03_tcp_socket_client.c  07_uds_socket_client.c  README.md  client.cpp  client_copy.cpp  ephemeral_port.c  makefile  server.cpp  server_copy.cpp
08_socket/: 01_socket_bind_ip.c  02_ephemeral_port.c  03_tcp_socket_client  03_tcp_socket_client.c  04_tcp_socket_server.c  05_udp_socket_client.c  06_udp_socket_server.c  07_uds_socket_client.c  08_uds_socket_server.c  09_gethostbyname.c  README.md  makefile
09-epoll/: 02_epoll_et.c
09_epoll/: 01_epoll.c  02_epoll_et.c  2pc.c  Makefile  do_two_thing_epoll.c  epollhup.c  glibc_aio.c  tcp_udp.c  tee.c  unblocking.c
10-project/: README.md  linked_list.c
10_project/: client.c  hello.txt  multiprocess.c  multithread.c  myshell.c  server.c
11_algorithm/: linked_list.c
11_project/: README.md
12_aio/: io_uring_1.c  testfile.txt
13_profiling/: Makefile  main.c  pprof_test.c  run.sh  run_pprof.sh
cs2310/: build.sh  main.cpp  project1.md
docs/: Linux.md  helper.md  prerequest.md
dsa/: README.md  dict.c  list.c
fork/: multi-thread.cpp
include/: Baoma.h  BaomaFactory.h  Benchi.h  BenchiFactory.h  Car.h  CarFactory.h  MockUser.h  Singleton.h  Solution.h  Student.h  User.h  db.h  db_file.h  entry.h  utils.h
local_socket/: local_socket.cpp  makefile
mmap/: mmap_test.cpp  mmap_test3.cpp
modern_cpp/: makefile  unordered_map_hash.cpp  unordered_map_hash_v2.cpp
pipe/: README.md  hello.txt  pipe_test.cpp
pthread/: pthread.cpp
script/: format.sh
socket/: README.md  client.c  multiprocess.c  multithread.c  server.c
src/: Baoma.cpp  BaomaFactory.cpp  Benchi.cpp  BenchiFactory.cpp  Singleton.cpp  Student.cpp  db.cpp  db_file.cpp  entry.cpp  main.cpp
test/: 1.out  2.in  2.out
thread/: compute.cpp  condition_variable.cpp  future  hello.cpp  makefile  mutex  mutex.cpp  producer_consumer.cpp  promise.cpp  thread_v1  thread_v1.cpp  unique_lock.cpp  world_test.go
thread_pool/: README.md
webserver/: README.md  makefile
(+47 files in other folders)
